--- a/app/src/main/res/layout/activity_add_ou_edit_contatos.xml
+++ b/app/src/main/res/layout/activity_add_ou_edit_contatos.xml
@@ -17,6 +17,12 @@
         android:layout_marginEnd="16dp"
         android:hint="Nome Completo"
         android:inputType="textPersonName"
+        android:padding="8dp"
+        android:backgroundTint="#ACD2DE"
+        android:backgroundTintMode="add"
+        android:elevation="2dp"
+        android:outlineProvider="background"
+        android:textColor="#000000"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -30,6 +36,12 @@
         android:hint="Número de Telefone"
         android:inputType="phone"
         app:layout_constraintTop_toBottomOf="@id/editTextName"
+        android:padding="8dp"
+        android:backgroundTint="#ACD2DE"
+        android:backgroundTintMode="add"
+        android:elevation="2dp"
+        android:outlineProvider="background"
+        android:textColor="#000000"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="16dp"
@@ -43,6 +55,12 @@
         android:layout_height="wrap_content"
         android:entries="@array/phone_types"
         app:layout_constraintTop_toBottomOf="@id/editTextPhoneNumber"
+        android:padding="8dp"
+        android:backgroundTint="#ACD2DE"
+        android:backgroundTintMode="add"
+        android:elevation="2dp"
+        android:outlineProvider="background"
+        android:textColor="#000000"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="16dp"
@@ -60,12 +78,19 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Salvar Contato"
+        android:layout_margin="2dp"
+        android:padding="8dp"
+        android:backgroundTint="#ACD2DE"
+        android:backgroundTintMode="add"
+        android:elevation="2dp"
+        android:outlineProvider="background"
+        android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.881" />
+        app:layout_constraintVertical_bias="0.881"/>
 
     <Button
         android:id="@+id/buttonDeleteContact"
@@ -73,7 +98,6 @@
         android:layout_height="wrap_content"
         android:text="Excluir Contato"
         android:visibility="gone"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintDimensionRatio="" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
