--- a/app/src/main/res/layout/item_contato.xml
+++ b/app/src/main/res/layout/item_contato.xml
@@ -10,7 +10,15 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="Nome"
+        android:textColor="@color/black"
         android:textSize="18sp"
+        android:background="@android:color/transparent"
+        android:layout_margin="2dp"
+        android:padding="4dp"
+        android:backgroundTint="#E9F0EF"
+        android:backgroundTintMode="add"
+        android:elevation="2dp"
+        android:outlineProvider="background"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
@@ -20,7 +28,15 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="Telefone"
+        android:textColor="@color/black"
         android:textSize="14sp"
+        android:background="@android:color/transparent"
+        android:layout_margin="2dp"
+        android:padding="4dp"
+        android:backgroundTint="#E9F0EF"
+        android:backgroundTintMode="add"
+        android:elevation="2dp"
+        android:outlineProvider="background"
         app:layout_constraintTop_toBottomOf="@id/textViewName"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
