--- a/app/src/main/res/layout/activity_add_ou_edit_contatos.xml
+++ b/app/src/main/res/layout/activity_add_ou_edit_contatos.xml
@@ -22,18 +22,35 @@
         android:orientation="vertical"/>
 
     <!-- Botão para adicionar um novo campo de telefone -->
+
+    <!-- Botão para salvar o contato -->
+
     <Button
         android:id="@+id/buttonAddPhoneNumber"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
         android:text="Adicionar Telefone"
-        android:layout_marginBottom="16dp"/>
+        android:textSize="18sp"
+        android:layout_margin="2dp"
+        android:padding="4dp"
+        android:backgroundTint="#61A8BF"
+        android:backgroundTintMode="add"
+        android:textColor="@color/white"
+        android:elevation="2dp"
+        android:outlineProvider="background"/>
 
-    <!-- Botão para salvar o contato -->
     <Button
         android:id="@+id/buttonSaveContact"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:textSize="18sp"
+        android:layout_margin="2dp"
+        android:padding="4dp"
+        android:backgroundTint="#61A8BF"
+        android:backgroundTintMode="add"
+        android:textColor="@color/white"
+        android:elevation="2dp"
         android:text="Salvar Contato"
         android:layout_marginBottom="8dp"/>
 
