--- a/app/src/main/res/layout/activity_lista_contatos.xml
+++ b/app/src/main/res/layout/activity_lista_contatos.xml
@@ -20,7 +20,7 @@
         android:outlineProvider="background"
         android:padding="8dp"
         android:text="Adicionar Contato"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
