--- a/app/src/main/res/layout/item_contato.xml
+++ b/app/src/main/res/layout/item_contato.xml
@@ -10,12 +10,12 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="Nome"
-        android:textColor="@color/white"
+        android:textColor="@color/black"
         android:textSize="18sp"
         android:background="@android:color/transparent"
         android:layout_margin="2dp"
         android:padding="4dp"
-        android:backgroundTint="#61A8BF"
+        android:backgroundTint="#81D4E7ED"
         android:backgroundTintMode="add"
         android:elevation="2dp"
         android:outlineProvider="background"
@@ -28,12 +28,12 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="Telefone"
-        android:textColor="@color/white"
+        android:textColor="@color/black"
         android:textSize="14sp"
         android:background="@android:color/transparent"
         android:layout_margin="2dp"
         android:padding="4dp"
-        android:backgroundTint="#61A8BF"
+        android:backgroundTint="#81D4E7ED"
         android:backgroundTintMode="add"
         android:elevation="2dp"
         android:outlineProvider="background"
